<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/order_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    android:background="@drawable/custom_border">


    <TextView
        android:id="@+id/shop_constant"
        style="@style/boldText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/shop_name_constant"
        app:layout_constraintBottom_toBottomOf="@+id/shop_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/shop_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/shop_name_example"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/shop_constant"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/address_constant"
        style="@style/boldText"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/address_constant"
        app:layout_constraintBottom_toBottomOf="@id/address"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/shop_name" />


    <TextView
        android:id="@+id/address"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/address_example"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/shop_name"
        app:layout_constraintTop_toBottomOf="@id/shop_name" />


    <TextView
        android:id="@+id/time_constant"
        style="@style/boldText"
        android:layout_width="wrap_content"

        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:text="@string/time_constant"
        app:layout_constraintBottom_toBottomOf="@id/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address" />


    <TextView
        android:id="@+id/time"

        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:text="@string/time_example"
        android:textSize="16sp"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@id/shop_name"
        app:layout_constraintTop_toBottomOf="@id/address" />


</androidx.constraintlayout.widget.ConstraintLayout>